fix images overflowing in projects page

--- a/styles/projects.css
+++ b/styles/projects.css
@@ -14,3 +14,7 @@
 		float: right;
 	}
 }
+
+.project-area {
+	overflow: hidden;
+}
